content/boundary/v0.21.x/content/docs/hosts/index.mdx
---
layout: docs
page_title: Host management
description: >-
  Learn about host management workflows in Boundary for onboarding new resources. Understand how dynamic host catalogs enable automated host discovery.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2026-02-04T15:54:05-06:00
# END AUTO GENERATED METADATA
---

# Host management in Boundary

Boundary supports built-in host management using static host catalogs and host catalog plugins.

@include 'configuration-reference/domain-model/host-catalog-structure.mdx'

**Static host catalogs** enable operators to manually define host sets for targets.
**Host catalog plugins** enable host discovery, allowing operators to sync host sets from cloud providers like Amazon Web Services, Microsoft Azure, and Google Cloud Platform.

## Host discovery

Traditionally, connecting to remote hosts and services requires knowledge of
the endpoint’s connection information, such as the IP address and port of the service.

This creates complexity when managing the onboarding of new resources at scale,
or dealing with dynamic, ephemeral services whose connection information frequently changes.

The increased operational overhead of having to manually manage and update
new or old resources is also an inefficient use of time.
Modern cloud resources can be tagged appropriately so that users
can automatically access the resources that they are allowed to connect to.

**Host discovery** focuses on automating the process of onboarding new or
changed infrastructure resources – and their connection info – to Boundary
as hosts.

## Automated host discovery in Boundary

Boundary supports target/host discovery in three primary workflows:

**[Manual configuration](/boundary/tutorials/community-administration/community-manage-targets)**:
Boundary administrators can manually configure static
hosts and targets via the administrator UI and CLI. Manual configuration of
targets with static hosts requires knowledge of the IP address or endpoint used
to connect to a host.

**[Host discovery via configuration as code with Terraform](/boundary/tutorials/get-started-community/community-get-started-config)**:
Boundary is fully programmatically instrumented and the discovery and configuration of new
infrastructure targets can be automated with
[Boundary’s Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest/docs).
This allows for dynamic configuration of a host and target without the need
for prior knowledge of the target’s connection info.

**[Runtime host discovery via dynamic host catalogs](/boundary/tutorials/host-management/aws-host-catalogs)**:
Boundary dynamic host catalogs automate the ingestion of resources from
infrastructure providers into Boundary. Boundary hosts are automatically
created, updated and added to host sets in order to reflect the connection
information maintained in these providers. This removes the need to know
host connection info or reapply infrastructure as code templates to
configure new or changed resources.

## Static host catalogs

Static host catalogs contain manual definitions of host sets. They allow operators to onboard and maintain sets of hosts manually.

## Dynamic host catalogs

Dynamic host catalogs are an agentless workflow for Boundary to
securely query infrastructure providers at runtime to discover and configure
new services. Boundary administrators can define rules for which
external resources should be ingested into the catalog by
[creating a host set](/boundary/docs/domain-model/host-sets)
with an attributes filter. These filters specify which discovered hosts
should be members of the host set.

Some plugin types further allow you to define a preference for connecting to specific network ranges or IPs using the optional `preferred_endpoints` attribute.
If set, the `preferred_endpoints` attribute specifies which IP address or DNS name out of a host's available options is your preferred endpoint for when Boundary establishes a session with the target.

You can specify multiple endpoints using CIDR or DNS formats to create an order of preferences.
CIDR strings should follow the `cidr:<valid IPv4/6 CIDR>` format, for example, `cidr:10.0.0.0/16`.
DNS strings should follow the `dns:<globbed name>` format, for example `dns:* .internal`.

If you do not specify a preference, Boundary chooses an endpoint using the following built-in priority order:

1. Private IPv4
1. Public IPv4
1. DNS
1. Private IPv6
1. Public IPv6

Boundary currently supports dynamic host catalog for AWS, Azure, and GCP.
HashiCorp will continue to grow this ecosystem to support additional providers.

## Next steps

To get started with static host catalogs, refer to the following:

- [Static host catalogs](/boundary/docs/hosts/create-static-host-catalogs)

To get started with dynamic host catalogs, refer to the following topics:

- [AWS dynamic host catalogs](/boundary/docs/hosts/aws)
- [Azure dynamic host catalogs](/boundary/docs/hosts/azure)
- [GCP dynamic host catalogs](/boundary/docs/hosts/gcp)
